# IoT-Paper

./: .gitignore  CITATION.cff  CONTRIBUTING.md  HOW_TO_UPDATE_GITHUB.md  LICENSE  README.md  __init__.py  evaluate.py  features.py  pyproject.toml  python-checks.yml  requirements.txt
.github/workflows/: python-checks.yml
configs/: default.yaml
notebooks/: 01_original_experiment.ipynb.ipynb
src/iot_paper/: __init__.py  data.py  evaluate.py  features.py
src/iot_paper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
