[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iot-paper"
version = "0.1.0"
description = "Machine learning pipeline for IoT/Windows dataset classification"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Mohammad Ali Mousavi Reineh"}]
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["src"]
